# PostGram

./: .gitignore  README.md  pyproject.toml
configs/: project.example.toml
docs/: architecture.md  flowchart.md  module_layout.md  project_alignment.md  roadmap.md
examples/: sample_transcripts.jsonl
src/postgram/: __init__.py  __main__.py  cli.py  config.py  dataset.py
tests/: test_cli.py  test_config.py  test_dataset.py
