[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "postgram"
version = "0.1.0"
description = "Localization-aware data scaffolding for post-transcriptional regulation modeling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "BioGeMT" }
]
dependencies = []

[project.scripts]
postgram = "postgram.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
